objects/ASI_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_Attach_in_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attach in Approval Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_Key__c</fullName>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_For_Contract_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Contract Use?</description>
        <label>For Contract Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Historical_Financial_Data__c</fullName>
        <label>Historical Financial Data</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Last_Run_Time__c</fullName>
        <label>Last Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Contract_v0_0__c</fullName>
        <label>New Contract v0.0</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_New_Contract_vFinal__c</fullName>
        <label>New Contract vFinal</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>ASI_TH_CRM_PaymentRequest__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Photo</fullName>
                </value>
                <value>
                    <fullName>EOL Action Plan</fullName>
                </value>
                <value>
                    <fullName>EOL Depletion Plan</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FeedItemID__c</fullName>
        <label>FeedItemID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FileID__c</fullName>
        <label>FileID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_File_Extension__c</fullName>
        <label>File Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_Image_URL__c</fullName>
        <formula>if(
CASE(LOWER( ASI_File_Extension__c )
, &apos;png&apos;, 1
, &apos;jpg&apos;, 1
, &apos;gif&apos;, 1
, &apos;jpeg&apos;, 1
, &apos;jfif&apos;, 1
, &apos;tiff&apos;, 1
,0) = 1
, &apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB120BY90&amp;versionId=&apos; &amp; ASI_FileID__c &amp; &apos;&amp;operationContext=CHATTER&apos;
, NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ASI_FileID__c, 	ASI_File_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Preview__c</fullName>
        <formula>IF(ISBLANK(ASI_Image_URL__c), ASI_File_Name__c, IMAGE(ASI_Image_URL__c, ASI_File_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_Product_End_of_Life_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product End of Life Request</label>
        <referenceTo>ASI_CRM_EOL__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attachment</label>
    <nameField>
        <displayFormat>Att-{YY}-{00000000}</displayFormat>
        <label>Attachment No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>